z-index fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,7 +81,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
     top: 0;bottom: 0;right: 0;left: 0;
     background-color: rgba(0, 0, 0, 0.4);
     display: flex;justify-content: center;align-items: center;
-    z-index: 1;
+    z-index: 5;
     cursor: crosshair;
     animation: show .4s;
 }
